--- a/index.html
+++ b/index.html
@@ -26,3 +26,17 @@
     }
   }
 </script>
+
+<style>
+    #simulateur-tarif-cantine {
+      max-width: 300px;
+      margin: 0 auto;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    #resultat {
+      margin-top: 10px;
+    }
+  </style>
+  
