--- a/index.html
+++ b/index.html
@@ -33,22 +33,30 @@
     #simulateur-tarif-cantine {
       max-width: 350px;
       padding: 20px;
-      border: 2px solid #868686;
-      border-radius: 4px;
+      border-radius: 10px;
     }
     .formulaire {
         font-family : 'calibri';
+        background-color: #162D4A;
+        color: white;
     }
     .formulaire button {
-        background-color: #4CAF50; /* Green */
+        background-color: #E44022;
         border: none;
         color: white;
-        padding: 5px 10px;
+        padding: 4px 8px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
         font-size: 16px;
+        border-radius: 55px;
+        transition-duration: 0.4s;
     }
+    .formulaire button:hover {
+    -moz-box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.2);
+    -webkit-box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.2);
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.2);
+}
     #resultat {
       margin-top: 10px;
     }
