--- a/index.html
+++ b/index.html
@@ -30,15 +30,18 @@
 </script>
 
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
+
     #simulateur-tarif-cantine {
       max-width: 350px;
       padding: 20px;
       border-radius: 10px;
     }
     .formulaire {
-        font-family : 'calibri';
+        font-family: 'Open Sans', sans-serif;
         background-color: #162D4A;
         color: white;
+        font-size: 14px;
     }
     .formulaire button {
         background-color: #E44022;
