--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   });
 
   function calculerTarif(quotientFamilial) {
-    if (quotientFamilial <= 600) {
+    if (quotientFamilial >= 0 & quotientFamilial <= 600) {
       return 1; // Tranche 1
-    } else if (quotientFamilial <= 800) {
+    } else if (quotientFamilial > 600 & quotientFamilial <= 800) {
       return 0.0101*quotientFamilial - 5.06; // Tranche 2
-    } else if (quotientFamilial <= 1450) {
+    } else if (quotientFamilial > 800 & quotientFamilial <= 1450) {
       return 0.0028*quotientFamilial + 0.78; // Tranche 3
-    } else if (quotientFamilial <= 2060) {
+    } else if (quotientFamilial > 1450 & quotientFamilial <= 2060) {
       return 0.0018*quotientFamilial + 2.23; // Tranche 4
-    }else {
+    } else if (quotientFamilial > 2060){
       return 5.97; // Tranche 5
     }
   }
