--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       return 0.0018*quotientFamilial + 2.23; // Tranche 4
     } else if (quotientFamilial > 2060){
       return 5.97; // Tranche 5
+    } else {
+      return 0;
     }
   }
 </script>
