--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
 
     #simulateur-tarif-cantine {
-      max-width: 350px;
+      max-width: 320px;
       padding: 20px;
       border-radius: 10px;
+    }
+    #quotient-familial {
+        width: 100px;
     }
     .formulaire {
         font-family: 'Open Sans', sans-serif;
