--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       max-width: 320px;
       padding: 20px;
       border-radius: 10px;
+      margin : 0 auto;
     }
     #quotient-familial {
         width: 100px;
